# toolkit

./: .gitignore  app.py  log.txt  notes.md  pyproject.toml  readme.md  requirements.txt  setup.ps1  tk.cmd  transfer.md
RM/: crud.py  database.py  models.py  requirements.txt  schema.sql  schemas.py
pylonegg/: agent.py  cli.py  client.py  config.py  database.py  databricks.py  datafactory.py  resourcegroup.py  ssh.py  storage.py
pylonegg/automation/: devops.py  outlook.py  prompts.py
pylonegg/azure/: __init__.py
pylonegg/azure/resourcegroup/: create.py
pylonegg/azure/storage/: sync.py  test.py
pylonegg/databricks/: __init__.py
pylonegg/databricks/cluster/: start.py
pylonegg/datafactory/: __init__.py
