[project]
name = "wm"
version = "0.1.0"
description = "Operational CLI for Azure, Databricks, and ADF"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.10"

[project.scripts]
pylonegg = "pylonegg.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
azure-identity = "^1.13.0"
azure-mgmt-resource = "^23.0.0"
azure-mgmt-authorization = "^2.0.0"
azure-mgmt-storage = "^20.0.0"
requests = "^2.31.0"